# Sem_3_Lab_3

./: CMakeLists.txt  FBT.go  FBT.h  FBT_test.cpp  FBT_test.go  README.md  array.h  array_test.cpp  doubleList.h  doubleList_test.cpp  go.mod  hashTable.h  hashTable_test.cpp  main.cpp  queue.h  queue_test.cpp  singleList.h  singleList_test.cpp  stack.h  stack_test.cpp
